--- a/polls/templates/temp_test/index.html
+++ b/polls/templates/temp_test/index.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div class ="container">
+{% extends "base.html" %}
+{% block title %} 설문 조사 {% endblock %}
+
+{% block content %}
+    <div class = "container">
         <table class="table table-striped">
             <thead>
                 <tr>
@@ -33,5 +28,4 @@
             </tbody> 
         </table>
     </div>
-</body>
-</html>
+{% endblock %}
