url template 태그

--- a/polls/templates/temp_test/index.html
+++ b/polls/templates/temp_test/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "temp_test/base.html" %}<!--templates보다 하위 디렉토리에 있을시 '하위디렉토리이름/파일이름' 형식-->
 {% block title %} 설문 조사 {% endblock %}
 
 {% block content %}
