DB이용 폼 처리1

--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,7 +1,21 @@
 <h1>{{question.question_txt}}</h1>
 
-<ul>
+<!-- <ul>
 {% for choice in question.choice_set.all %}
      <li>{{ choice.choice_text}}</li>
 {% endfor %}
-</ul>
+</ul> -->
+
+{% if error_message %}
+     <p>{{ error_message }}</p>
+{% endif %}
+<form action="{% url 'polls:vote' question.id %}" method="POST">
+{% csrf_token %}<!--공격방법 차단 -->
+{% for choice in question.choice_sㅊell.all %}
+     <input type="radio" name="choice" id="{{forloop.counter}}" value="{{choice_id}}"/>
+     <label for="choice{{ forloop.counter }}">{{ choice.choice.text}}</label><br>
+{% endfor %}
+<input type="submit" value="투표"/>
+</form>
+
+<!-- forloop.counter:for태그의 반복횟수-->
