--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -7,13 +7,13 @@
 </ul> -->
 
 {% if error_message %}
-     <p>{{ error_message }}</p>
+     <p style="color:red"><strong>{{ error_message }}</strong></p>
 {% endif %}
 <form action="{% url 'polls:vote' question.id %}" method="POST">
 {% csrf_token %}<!--공격방법 차단 -->
-{% for choice in question.choice_sㅊell.all %}
-     <input type="radio" name="choice" id="{{forloop.counter}}" value="{{choice_id}}"/>
-     <label for="choice{{ forloop.counter }}">{{ choice.choice.text}}</label><br>
+{% for choice in question.choice_set.all %}
+     <input type="radio" name="choice" id="{{forloop.counter}}" value="{{choice.id}}"/>
+     <label for="choice{{ forloop.counter }}">{{ choice.choice_text}}</label><br>
 {% endfor %}
 <input type="submit" value="투표"/>
 </form>
